# gd32f30x-demo-suites-cmake-vscode

./: README.md
Drivers/BSP/GD32F303B_EVAL/: gd32f303b_eval.c  gd32f303b_eval.h  gd32f303b_lcd_eval.c  gd32f303b_lcd_eval.h
Drivers/BSP/GD32F303B_EVAL/LCD_Commom/: lcd_log.c  lcd_log.h
Drivers/BSP/GD32F303B_START/: gd32f303b_start.c  gd32f303b_start.h
Drivers/BSP/GD32F303C_EVAL/: gd32f303c_eval.c  gd32f303c_eval.h  gd32f303c_lcd_eval.c  gd32f303c_lcd_eval.h
Drivers/BSP/GD32F303C_START/: gd32f303c_start.c  gd32f303c_start.h
Drivers/BSP/GD32F303E_EVAL/: gd32f303e_eval.c  gd32f303e_eval.h  gd32f303e_lcd_eval.c  gd32f303e_lcd_eval.h
Drivers/BSP/GD32F303E_EVAL/LCD_Commom/: lcd_log.c  lcd_log.h
Drivers/BSP/GD32F303R_START/: gd32f303r_start.c  gd32f303r_start.h
Drivers/BSP/GD32F305R_START/: gd32f305r_start.c  gd32f305r_start.h
Drivers/BSP/GD32F307C_EVAL/: gd32f307c_eval.c  gd32f307c_eval.h  gd32f307c_lcd_eval.c  gd32f307c_lcd_eval.h
Drivers/BSP/GD32F307C_EVAL/LCD_Commom/: lcd_log.c  lcd_log.h
Drivers/GD32F30x_standard_peripheral/Source/: gd32f30x_misc.c
Drivers/GD32F30x_usbd_library/device/Include/: usb_ch9_std.h  usbd_core.h  usbd_enum.h  usbd_pwr.h  usbd_transc.h
Drivers/GD32F30x_usbd_library/device/Source/: usbd_core.c  usbd_enum.c  usbd_pwr.c  usbd_transc.c
Drivers/GD32F30x_usbd_library/usbd/Include/: usbd_lld_core.h  usbd_lld_int.h  usbd_lld_regs.h
Drivers/GD32F30x_usbd_library/usbd/Source/: usbd_lld_core.c  usbd_lld_int.c
Drivers/GD32F30x_usbfs_library/driver/Include/: drv_usb_core.h  drv_usb_dev.h  drv_usb_host.h  drv_usb_hw.h  drv_usb_regs.h  drv_usbd_int.h  drv_usbh_int.h
Drivers/GD32F30x_usbfs_library/driver/Source/: drv_usb_core.c  drv_usb_dev.c  drv_usb_host.c  drv_usbd_int.c  drv_usbh_int.c
Drivers/GD32F30x_usbfs_library/ustd/common/: usb_ch9_std.h
Projects/GD32F303B_EVAL/01_GPIO_Running_LED/Application/: readme.txt
Projects/GD32F303B_EVAL/02_GPIO_Key_Polling_mode/Application/: readme.txt
Projects/GD32F303B_EVAL/03_EXTI_Key_Interrupt_mode/Application/: readme.txt
Projects/GD32F303B_EVAL/04_USART_Printf/Application/: readme.txt
Projects/GD32F303B_EVAL/05_USART_Echo_Interrupt_mode/Application/: readme.txt
Projects/GD32F303B_EVAL/06_USART_DMA/Application/: readme.txt
Projects/GD32F303B_EVAL/07_ADC_Temperature_Vrefint/Application/: readme.txt
Projects/GD32F303B_EVAL/08_ADC0_ADC1_Follow_up_mode/Application/: readme.txt
Projects/GD32F303B_EVAL/09_ADC0_ADC1_Regular_Parallel_mode/Application/: readme.txt
Projects/GD32F303B_EVAL/10_DAC_Output_Voltage_Value/Application/: readme.txt
Projects/GD32F303B_EVAL/11_I2C_EEPROM/Application/: CMakeLists.txt  readme.txt
Projects/GD32F303B_EVAL/12_SPI_SPI_Flash/: CMakeLists.txt  gd32f30x_flash.ld
Projects/GD32F303B_EVAL/12_SPI_SPI_Flash/Application/: CMakeLists.txt  readme.txt
Projects/GD32F303B_EVAL/13_I2S_Audio_Player/Application/: CMakeLists.txt  readme.txt
Projects/GD32F303B_EVAL/14_EXMC_TouchScreen/Application/: CMakeLists.txt  readme.txt
Projects/GD32F303B_EVAL/14_EXMC_TouchScreen/Drivers/BSP/GD32F303B_EVAL/: CMakeLists.txt
Projects/GD32F303B_EVAL/15_CAN_Network/Application/: CMakeLists.txt  readme.txt
Projects/GD32F303B_EVAL/16_RCU_Clock_Out/Application/: CMakeLists.txt  readme.txt
Projects/GD32F303B_EVAL/19_RTC_Calendar/Drivers/BSP/GD32F303B_EVAL/: CMakeLists.txt
Projects/GD32F303B_EVAL/21_USBD_Keyboard/: CMakeLists.txt
Projects/GD32F303B_START/01_GPIO_Running_LED/Drivers/BSP/GD32F303B_START/: CMakeLists.txt
Projects/GD32F303B_START/04_TIMER_Key_EXTI/: CMakeLists.txt
Projects/GD32F303B_START/06_USBD_CDC_ACM/: CMakeLists.txt
Projects/GD32F303C_EVAL/11_I2C_EEPROM/Drivers/GD32F30x_standard_peripheral/: CMakeLists.txt
Projects/GD32F303C_EVAL/13_I2S_Audio_Player/: gd32f30x_flash.ld
Projects/GD32F303C_EVAL/15_EXMC_TouchScreen/Drivers/BSP/GD32F303C_EVAL/: CMakeLists.txt
Projects/GD32F303C_EVAL/16_SDIO_SDCardTest/: CMakeLists.txt
Projects/GD32F303C_EVAL/23_USBD_Keyboard/: CMakeLists.txt
Projects/GD32F303C_EVAL/23_USBD_Keyboard/Drivers/BSP/GD32F303C_EVAL/: CMakeLists.txt
Projects/GD32F303C_START/01_GPIO_Running_LED/: CMakeLists.txt
Projects/GD32F303C_START/02_GPIO_Key_Polling_mode/: gd32f30x_flash.ld
Projects/GD32F303C_START/06_USBD_CDC_ACM/: CMakeLists.txt
Projects/GD32F303C_START/06_USBD_CDC_ACM/Drivers/BSP/GD32F303C_START/: CMakeLists.txt
Projects/GD32F303C_START/06_USBD_CDC_ACM/Drivers/GD32F30x_usbd_library/: CMakeLists.txt
Projects/GD32F303E_EVAL/03_EXTI_Key_Interrupt_mode/Drivers/BSP/GD32F303E_EVAL/: CMakeLists.txt
Projects/GD32F303E_EVAL/06_USART_DMA/: gd32f30x_flash.ld
Projects/GD32F303E_EVAL/15_EXMC_TouchScreen/Drivers/BSP/GD32F303E_EVAL/: CMakeLists.txt
Projects/GD32F303E_EVAL/19_CTC_Calibration/: GD32F30x_CL.svd
Projects/GD32F303E_EVAL/21_RTC_Calendar/: CMakeLists.txt
Projects/GD32F303E_EVAL/23_USBD_Keyboard/: CMakeLists.txt
Projects/GD32F303E_EVAL/23_USBD_Keyboard/Drivers/GD32F30x_usbd_library/: CMakeLists.txt
Projects/GD32F303R_START/03_EXTI_Key_Interrupt_mode/: CMakeLists.txt
Projects/GD32F303R_START/03_EXTI_Key_Interrupt_mode/Drivers/BSP/GD32F303R_START/: CMakeLists.txt
Projects/GD32F303R_START/06_USBD_CDC_ACM/: CMakeLists.txt
Projects/GD32F305R_START/02_GPIO_Key_Polling_mode/: CMakeLists.txt
Projects/GD32F305R_START/02_GPIO_Key_Polling_mode/Drivers/BSP/GD32F305R_START/: CMakeLists.txt
Projects/GD32F305R_START/05_USBFS_USB_Device_CDC_ACM/: CMakeLists.txt
Projects/GD32F305R_START/05_USBFS_USB_Host_USBH_MSC/: CMakeLists.txt
Projects/GD32F307C_EVAL/06_USART_DMA/Drivers/BSP/GD32F307C_EVAL/: CMakeLists.txt
Projects/GD32F307C_EVAL/15_EXMC_TouchScreen/: gd32f30x_flash.ld
Projects/GD32F307C_EVAL/15_EXMC_TouchScreen/Drivers/BSP/GD32F307C_EVAL/: CMakeLists.txt
Projects/GD32F307C_EVAL/18_CTC_Calibration/: CMakeLists.txt
Projects/GD32F307C_EVAL/22_ENET_FreeRTOS_tcpudp/: CMakeLists.txt
Projects/GD32F307C_EVAL/22_ENET_Raw_tcpudp/: CMakeLists.txt
Projects/GD32F307C_EVAL/23_USB_FS_USB_Device_CDC_ACM/: CMakeLists.txt
Projects/GD32F307C_EVAL/23_USB_FS_USB_Host_MSC_Host/: CMakeLists.txt
(+676 files in other folders)
