project(GD32F303E_EVAL LANGUAGES C CXX ASM)

add_library(GD32F303E_EVAL OBJECT
    ${DRIVERS_DIR}/BSP/GD32F303E_EVAL/gd32f303e_eval.c
    ${DRIVERS_DIR}/BSP/GD32F303E_EVAL/gd32f303e_lcd_eval.c
    )

target_include_directories(GD32F303E_EVAL PUBLIC
    ${DRIVERS_DIR}/Library/BSP/GD32F303E_EVAL/LCD_Commom
    ${DRIVERS_DIR}/BSP/GD32F303E_EVAL
    ${DRIVERS_DIR}/BSP/GD32F303E_EVAL/LCD_Commom
    )

target_link_libraries(GD32F303E_EVAL PUBLIC GD32F30x_standard_peripheral)
